[package]
name = "nft-evolution-wasm"
version = "0.0.1"
authors = [ "Catalin Balasoiu", "Adrian Purcaru"]
edition = "2021"
publish = false

[lib]
crate-type = [ "cdylib",]

[workspace]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.nft-evolution]
path = ".."

[dependencies.elrond-wasm-node]
version = "0.22.10"

[dependencies.elrond-wasm-output]
version = "0.22.10"
features = ["wasm-output-mode"]
